--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.example.clothesshop.ProductFragment"
+        android:name="com.example.clothesshop.ui.product.ProductFragment"
         android:label="fragment_product_list"
         tools:layout="@layout/fragment_product_list" >
         <action
