--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -40,5 +40,8 @@
             android:name="arg"
             app:argType="string"
             android:defaultValue="null" />
+        <action
+            android:id="@+id/action_typeFragment_to_productFragment"
+            app:destination="@id/productFragment" />
     </fragment>
 </navigation>
