--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -39,9 +39,14 @@
         <argument
             android:name="arg"
             app:argType="string"
-            android:defaultValue="null" />
+            android:defaultValue="all" />
         <action
             android:id="@+id/action_typeFragment_to_productFragment"
             app:destination="@id/productFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/basketFragment"
+        android:name="com.example.clothesshop.ui.basket.BasketFragment"
+        android:label="fragment_basket"
+        tools:layout="@layout/fragment_basket" />
 </navigation>
