--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -7,6 +7,7 @@
     android:layout_margin="1dp"
     app:cardCornerRadius="0dp"
     app:cardElevation="6dp"
+    tools:context=".ui.product.ProductFragment"
     tools:layout_editor_absoluteX="10dp"
     tools:layout_editor_absoluteY="10dp">
 
@@ -17,30 +18,27 @@
         android:orientation="vertical">
 
 
-
         <ImageView
             android:id="@+id/imageview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:layout_gravity="top"
-            android:layout_weight="1.5" />
+            tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
             android:id="@+id/textName"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_weight="4"
+            android:layout_marginTop="10dp"
             android:text="text Name and main text"
             android:textSize="15dp"
-            android:layout_marginTop="10dp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
             android:orientation="horizontal"
             android:padding="5dp">
 
@@ -48,7 +46,7 @@
                 android:id="@+id/textPrice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center|top"
+                android:layout_gravity="top"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="8dp"
@@ -57,72 +55,69 @@
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="140dp"
-                android:layout_height="50dp"
-                android:layout_weight="1.5"
-                app:icon="@drawable/ic_baseline_shopping_cart_24"
-                app:cornerRadius="30dp"
-                />
+            <ImageView
+                android:id="@+id/button_basket"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />
 
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:cardCornerRadius="8dp"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:elevation="10dp">-->
+            <!--            <androidx.cardview.widget.CardView-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                app:cardCornerRadius="8dp"-->
+            <!--                android:layout_margin="5dp"-->
+            <!--                android:elevation="10dp">-->
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/roundedImageView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:src="@drawable/ic_baseline_shopping_cart_24"-->
-<!--                    android:background="@color/white"-->
-<!--                    android:scaleType="centerCrop"-->
-<!--                    />-->
-<!--            </androidx.cardview.widget.CardView>-->
+            <!--                <ImageView-->
+            <!--                    android:id="@+id/roundedImageView"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:src="@drawable/ic_baseline_shopping_cart_24"-->
+            <!--                    android:background="@color/white"-->
+            <!--                    android:scaleType="centerCrop"-->
+            <!--                    />-->
+            <!--            </androidx.cardview.widget.CardView>-->
 
-<!--            <androidx.appcompat.widget.AppCompatImageView-->
-<!--                android:id="@+id/timerButton"-->
-<!--                style="@style/Widget.AppCompat.ActionButton"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="5dp"-->
-<!--                android:background="@color/ic_launcher_background"-->
-<!--                android:onClick="@{clickListener}"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />-->
-
+            <!--            <androidx.appcompat.widget.AppCompatImageView-->
+            <!--                android:id="@+id/timerButton"-->
+            <!--                style="@style/Widget.AppCompat.ActionButton"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginEnd="5dp"-->
+            <!--                android:background="@color/ic_launcher_background"-->
+            <!--                android:onClick="@{clickListener}"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />-->
 
 
         </LinearLayout>
 
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:id="@+id/registerButton"-->
-<!--            style="@style/Widget.MaterialComponents.Button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:elevation="0dp"-->
-<!--            android:enabled="@{!loading}"-->
-<!--            android:onClick="@{clickListener}"-->
-<!--            android:paddingStart="16dp"-->
-<!--            android:paddingTop="24dp"-->
-<!--            android:paddingEnd="16dp"-->
-<!--            android:paddingBottom="24dp"-->
-<!--            android:textSize="18sp"-->
-<!--            android:text="TEXT"-->
-<!--            android:textColor="@color/white"-->
-<!--            app:cornerRadius="10dp"-->
-<!--            app:icon="@drawable/ic_baseline_shopping_cart_24"-->
-<!--            app:iconGravity="start"-->
-<!--            app:iconTint="@color/white"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/cashButton" />-->
+        <!--        <com.google.android.material.button.MaterialButton-->
+        <!--            android:id="@+id/registerButton"-->
+        <!--            style="@style/Widget.MaterialComponents.Button"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:elevation="0dp"-->
+        <!--            android:enabled="@{!loading}"-->
+        <!--            android:onClick="@{clickListener}"-->
+        <!--            android:paddingStart="16dp"-->
+        <!--            android:paddingTop="24dp"-->
+        <!--            android:paddingEnd="16dp"-->
+        <!--            android:paddingBottom="24dp"-->
+        <!--            android:textSize="18sp"-->
+        <!--            android:text="TEXT"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            app:cornerRadius="10dp"-->
+        <!--            app:icon="@drawable/ic_baseline_shopping_cart_24"-->
+        <!--            app:iconGravity="start"-->
+        <!--            app:iconTint="@color/white"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/cashButton" />-->
 
     </LinearLayout>
 
