--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -1,32 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list"
+    android:name="com.example.clothesshop.BasketFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.basket.BasketFragment">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="center"
-            android:text="Twój koszyk jest pusty"
-            android:textColorHighlight="#000000"
-            android:textSize="46dp" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="15dp" />
-
-    </LinearLayout>
-
-</FrameLayout>
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:background="@drawable/ic_baseline_add_shopping_cart_24"
+    app:layoutManager="LinearLayoutManager"
+    tools:context=".ui.basket.BasketFragment"
+    tools:listitem="@layout/fragment_product" />
