--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.category.CategoryFragment">
 
     <LinearLayout
+        android:id="@+id/categories"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
