--- a/app/src/main/res/menu/botton_menu.xml
+++ b/app/src/main/res/menu/botton_menu.xml
@@ -5,21 +5,31 @@
         android:title="Główna"
         android:id="@+id/home_graph"
         android:icon="@drawable/ic_baseline_other_houses_24"
-        app:showAsAction="ifRoom"
-        android:orderInCategory="1"
+
+
         />
     <item
         android:title="Katalog"
         android:id="@+id/catalog_graph"
         android:icon="@drawable/ic_baseline_dashboard_24"
-        app:showAsAction="ifRoom"
-        android:orderInCategory="2"
+
+
         />
     <item
         android:title="Koszyk"
         android:id="@+id/basket_graph"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
-        app:showAsAction="ifRoom"
-        android:orderInCategory="3"
+
+
         />
+
+    <item
+        android:title="Więcej"
+        android:id="@+id/more_graph"
+        android:icon="@drawable/ic_baseline_menu_24"
+
+
+        />
+
+
 </menu>
