--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -10,26 +10,41 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayoutTop"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="horizontal"
             android:visibility="visible">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CENA PRODUKTÓW" />
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:text="CENA PRODUKTÓW:"
+                android:gravity="left|center"
+                android:layout_weight="@integer/material_motion_duration_long_1"
+                />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/sum_price"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="DOSTAWA ZA DARMO " />
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/green"
+                android:text="0 ZŁ"
+                android:gravity="right|center"
+                android:layout_weight="@integer/material_motion_duration_long_1"
+                />
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -46,10 +61,10 @@
             tools:listitem="@layout/fragment_product" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/order"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:text="Przejdż do kasy"
             android:visibility="visible" />
 
