--- a/app/src/main/res/layout/fragment_product_basket.xml
+++ b/app/src/main/res/layout/fragment_product_basket.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
-    app:cardCornerRadius="0dp"
+    android:layout_marginBottom="25dp"
+    app:cardCornerRadius="20dp"
     app:cardElevation="6dp"
     tools:context=".ui.product.ProductFragment"
     tools:layout_editor_absoluteX="10dp"
@@ -15,29 +16,36 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:background="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
-
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_gravity="top"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-        <TextView
-            android:id="@+id/textName"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="text Name and main text"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageview"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+
+                tools:src="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/textName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="text Name and main text"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,7 +74,6 @@
                 app:srcCompat="@drawable/ic_baseline_delete_forever_24" />
 
         </LinearLayout>
-
 
 
     </LinearLayout>
