--- a/app/src/main/res/layout/fragment_tabs.xml
+++ b/app/src/main/res/layout/fragment_tabs.xml
@@ -22,14 +22,14 @@
         tools:layout="@layout/fragment_category" />
 
 
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/botton_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
