--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_tabsFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_tabsFragmentGraph_to_orderFragment"
+            app:destination="@id/orderFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -33,5 +36,44 @@
         <action
             android:id="@+id/action_signUpFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.clothesshop.ui.order.OrderFragment"
+        android:label="fragment_order"
+        tools:layout="@layout/fragment_order" >
+        <action
+            android:id="@+id/action_orderFragment_to_orderPaymentFragment"
+            app:destination="@id/orderPaymentFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderPaymentFragment"
+        android:name="com.example.clothesshop.ui.order.OrderPaymentFragment"
+        android:label="fragment_order_payment"
+        tools:layout="@layout/fragment_order_payment" >
+        <action
+            android:id="@+id/action_orderPaymentFragment_to_orderSummaryFragment"
+            app:destination="@id/orderSummaryFragment" />
+        <argument
+            android:name="orderAdres"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderSummaryFragment"
+        android:name="com.example.clothesshop.ui.order.OrderSummaryFragment"
+        android:label="fragment_order_summary"
+        tools:layout="@layout/fragment_order_summary" >
+        <argument
+            android:name="delivery"
+            app:argType="string" />
+        <argument
+            android:name="payType"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_orderSummaryFragment_to_tabsFragmentGraph"
+            app:destination="@id/tabsFragmentGraph" />
+        <argument
+            android:name="address"
+            app:argType="string" />
     </fragment>
 </navigation>
