--- a/app/src/main/res/navigation/tabs_graph.xml
+++ b/app/src/main/res/navigation/tabs_graph.xml
@@ -8,4 +8,5 @@
     <include app:graph="@navigation/basket_graph" />
     <include app:graph="@navigation/catalog_graph" />
     <include app:graph="@navigation/home_graph" />
+    <include app:graph="@navigation/more_graph" />
 </navigation>
