--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="half_dp">0.5dp</dimen>
 
     <dimen name="edit_text_radius">3dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
