--- a/app/src/main/res/navigation/catalog_graph.xml
+++ b/app/src/main/res/navigation/catalog_graph.xml
@@ -22,6 +22,10 @@
         <action
             android:id="@+id/action_productFragment3_to_productDetailsFragment4"
             app:destination="@id/productDetailsFragment4" />
+        <argument
+            android:name="path"
+            app:argType="string"
+            android:defaultValue="none" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment4"
@@ -32,5 +36,9 @@
             android:name="id"
             app:argType="string"
             android:defaultValue="null" />
+        <argument
+            android:name="path"
+            app:argType="string"
+            android:defaultValue="none" />
     </fragment>
 </navigation>
