--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -12,7 +12,8 @@
         tools:layout="@layout/fragment_category" >
         <action
             android:id="@+id/action_categoryFragment2_to_catalog_graph"
-            app:destination="@id/catalog_graph" />
+            app:destination="@id/catalog_graph"
+            app:popEnterAnim="@android:anim/slide_in_left" />
 
     </fragment>
     <include app:graph="@navigation/catalog_graph" >
